# xgboost-cicids2017

./: .gitattributes  README.md  pyproject.toml
data/cicids2017/: friday.csv  friday.parquet  monday.csv  monday.parquet  thursday.csv  thursday.parquet  tuesday.csv  tuesday.parquet  wednesday.csv  wednesday.parquet
models/: label_encoder.pkl  scaler.pkl  xgb_booster.model  xgb_booster.pickle
src/netviser/: features.csv
src/netviser/train/: train_xgboost.ipynb
src/netviser/visualization/: visualization.ipynb
src/xgboost-cicids2017/etl/: to_parquet.ipynb
src/xgboost-cicids2017/test/: xgboost_inference.ipynb
src/xgboost-cicids2017/train/: train_xgboost.ipynb  train_xgboost_arrow.ipynb
src/xgboost-cicids2017/visualization/: visualization.ipynb
