[project]
name = "netviser"
version = "0.1.0"
description = "A model and dataset demo for netviser."
authors = [
    {name = "Supakrit", email = "supakrit.apo@cp.co.th"},
]
dependencies = ["numpy>=2.0.2", "pandas>=2.2.3", "plotly>=5.24.1", "matplotlib>=3.9.3", "seaborn>=0.13.2", "tensorflow>=2.18.0", "ipykernel>=6.29.5", "scikit-learn>=1.5.2", "imblearn>=0.0", "xgboost>=2.1.3", "nbformat>=5.10.4", "shap>=0.46.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
