[project]
name = "xgboost-cicids2017"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["numpy>=2.2.0", "pandas>=2.2.3", "scikit-learn>=1.6.0", "seaborn>=0.13.2", "xgboost>=2.1.3", "ipykernel>=6.29.5", "pyarrow>=18.1.0", "fastparquet>=2024.11.0", "pyecharts>=2.0.7", "plotly>=5.24.1", "nbformat>=5.10.4"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
